Create different webpages and route to them

--- a/lab1/app/views/home/index.html.erb
+++ b/lab1/app/views/home/index.html.erb
@@ -1,13 +1,11 @@
 
 <body>
-Hello from Ryan!<br>
+<h2>Welcome to Ryan Bird's Lab1 Submission</h2>
+<p>
+Feel free to login or signup for my service
+</p>
+<%= link_to "Login", '/login' %>
+<%= link_to "Sign up", '/signup' %>
 
-<% for num in 0..4 %>
-	<%= num %><br>
-<% end %>
-
-<% (0..5).each do |num| %>
-	<%= "Here is " + num.to_s %><br>
-<% end %>
 
 </body>
