--- a/lab1/app/views/layouts/application.html.erb
+++ b/lab1/app/views/layouts/application.html.erb
@@ -8,6 +8,36 @@
 </head>
 <body>
 
+<div class="navbar navbar-default" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">BYU Dropbox</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand">Lab 1</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+
+          <li class="<%= 'active' if current_page?(root_path) %>"><%= link_to "Home", root_path %></li>
+          <li class="<%= 'active' if current_page?('/login') %>"><%= link_to "Login", '/login' %></li>
+          <li class="<%= 'active' if current_page?('/profile') %>"><%= link_to "Profile", '/profile' %></li> 
+          <li class="<%= 'active' if current_page?("/signup") %>"><%= link_to "Signup", "/signup" %></li>
+
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+<% if current_user %>
+<%= current_user %>
+<% else %>
+Guest
+<% end %>
+
 <%= yield %>
 
 </body>
