--- a/lab1/app/views/layouts/application.html.erb
+++ b/lab1/app/views/layouts/application.html.erb
@@ -23,7 +23,11 @@
           <ul class="nav navbar-nav">
 
           <li class="<%= 'active' if current_page?(root_path) %>"><%= link_to "Home", root_path %></li>
+          <% if current_user and current_user != "" %>
+          <li class="<%= 'active' if current_page?('/login') %>"><%= link_to "Logout", '/logout' %></li>
+          <% else %>
           <li class="<%= 'active' if current_page?('/login') %>"><%= link_to "Login", '/login' %></li>
+          <% end %>
           <li class="<%= 'active' if current_page?('/profile') %>"><%= link_to "Profile", '/profile' %></li> 
           <li class="<%= 'active' if current_page?("/signup") %>"><%= link_to "Signup", "/signup" %></li>
 
@@ -32,7 +36,7 @@
       </div>
     </div>
 
-<% if current_user %>
+<% if current_user != "" %>
 <%= current_user %>
 <% else %>
 Guest
