--- a/lab1/app/views/home/signup.html.erb
+++ b/lab1/app/views/home/signup.html.erb
@@ -1,6 +1,6 @@
 
 <body>
-<%= form_tag("/authorize", method: "get") do %>
+<%= form_tag("/signup", method: "get") do %>
   <%= label_tag(:id, "User Name:") %>
   <%= text_field_tag(:id) %>
   <%= submit_tag("Sign up") %>
