--- a/lab1/app/views/layouts/application.html.erb
+++ b/lab1/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
       </div>
     </div>
 
-<% if current_user != "" %>
+<% if current_user != nil and current_user != "" %>
 <%= current_user %>
 <% else %>
 Guest
